--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <section class="row log" v-if="game_is_on == true">
         <div class="small-12 columns">
             <ul>
-                <li v-for="log in logs">
-                    {{ log }}
+                <li v-for="log in logs" :class="{ 'player-turn' : log.turn == 'p', 'monster-turn' : log.turn == 'm' }">
+                    {{ log.text }}
                 </li>
             </ul>
         </div>
